// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompletionModule onInitialize should return results 1`] = `
Object {
  "capabilities": Object {
    "completionProvider": Object {},
  },
}
`;

exports[`CompletionModule with diagnostics at the next line and cursor in a disable comment, should return rule completions 1`] = `
Array [
  Object {
    "detail": "disable indentation rule. (stylelint)",
    "kind": 15,
    "label": "indentation",
  },
]
`;

exports[`CompletionModule with diagnostics at the next line and cursor in a next-line disable comment, should return rule completions 1`] = `
Array [
  Object {
    "detail": "disable indentation rule. (stylelint)",
    "kind": 15,
    "label": "indentation",
  },
]
`;

exports[`CompletionModule with diagnostics at the next line, should return disable comment completions for rule 1`] = `
Array [
  Object {
    "detail": "Turn off Stylelint rules for individual lines only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-line",
  },
  Object {
    "detail": "Turn off Stylelint rules for the next line only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-next-line indentation */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-next-line \${0:indentation} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-next-line",
  },
  Object {
    "detail": "Turn off all Stylelint or individual rules, after which you do not need to re-enable stylelint. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable rule */
/* stylelint-enable rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable \${0:rule} */
/* stylelint-enable \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable",
  },
]
`;

exports[`CompletionModule with diagnostics at the same line and cursor in a line disable comment, should return rule completions 1`] = `
Array [
  Object {
    "detail": "disable indentation rule. (stylelint)",
    "kind": 15,
    "label": "indentation",
  },
]
`;

exports[`CompletionModule with diagnostics at the same line, should return disable comment completions for rule 1`] = `
Array [
  Object {
    "detail": "Turn off Stylelint rules for individual lines only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-line indentation */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-line \${0:indentation} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-line",
  },
  Object {
    "detail": "Turn off Stylelint rules for the next line only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-next-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-next-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-next-line",
  },
  Object {
    "detail": "Turn off all Stylelint or individual rules, after which you do not need to re-enable stylelint. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable rule */
/* stylelint-enable rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable \${0:rule} */
/* stylelint-enable \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable",
  },
]
`;

exports[`CompletionModule with needless disables reported for a diagnostic, should return generic completions 1`] = `
Array [
  Object {
    "detail": "Turn off Stylelint rules for individual lines only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-line",
  },
  Object {
    "detail": "Turn off Stylelint rules for the next line only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-next-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-next-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-next-line",
  },
  Object {
    "detail": "Turn off all Stylelint or individual rules, after which you do not need to re-enable stylelint. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable rule */
/* stylelint-enable rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable \${0:rule} */
/* stylelint-enable \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable",
  },
]
`;

exports[`CompletionModule with no diagnostics at same or next line and cursor in a disable comment, should not return completions 1`] = `Array []`;

exports[`CompletionModule with no diagnostics at the same or next line, should return generic completions 1`] = `
Array [
  Object {
    "detail": "Turn off Stylelint rules for individual lines only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-line",
  },
  Object {
    "detail": "Turn off Stylelint rules for the next line only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-next-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-next-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-next-line",
  },
  Object {
    "detail": "Turn off all Stylelint or individual rules, after which you do not need to re-enable stylelint. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable rule */
/* stylelint-enable rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable \${0:rule} */
/* stylelint-enable \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable",
  },
]
`;

exports[`CompletionModule without diagnostics, should return generic completions 1`] = `
Array [
  Object {
    "detail": "Turn off Stylelint rules for individual lines only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-line",
  },
  Object {
    "detail": "Turn off Stylelint rules for the next line only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-next-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-next-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-next-line",
  },
  Object {
    "detail": "Turn off all Stylelint or individual rules, after which you do not need to re-enable stylelint. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable rule */
/* stylelint-enable rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable \${0:rule} */
/* stylelint-enable \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable",
  },
]
`;

exports[`CompletionModule without the validator module, should return generic completions 1`] = `
Array [
  Object {
    "detail": "Turn off Stylelint rules for individual lines only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-line",
  },
  Object {
    "detail": "Turn off Stylelint rules for the next line only, after which you do not need to explicitly re-enable them. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable-next-line rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable-next-line \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable-next-line",
  },
  Object {
    "detail": "Turn off all Stylelint or individual rules, after which you do not need to re-enable stylelint. (stylelint)",
    "documentation": Object {
      "kind": "markdown",
      "value": "\`\`\`css
/* stylelint-disable rule */
/* stylelint-enable rule */
\`\`\`",
    },
    "insertText": "/* stylelint-disable \${0:rule} */
/* stylelint-enable \${0:rule} */",
    "insertTextFormat": 2,
    "kind": 15,
    "label": "stylelint-disable",
  },
]
`;
